--- a/Implementasi ke Web/TSP/tsp.css
+++ b/Implementasi ke Web/TSP/tsp.css
@@ -42,7 +42,7 @@ span {
     margin-bottom: 1rem;
 }
 
-.num-locations form input[type="submit"] {
+.num-locations form button[type="submit"] {
     font-size: 1rem;
     margin-top: 0.9rem;
 }
@@ -55,43 +55,5 @@ span {
     /* margin-bottom: 0; */
 }
 
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
-  
-  /* Modal Content */
-  .modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-  }
-  
-  /* The Close Button */
-  .close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-  }
 
 
